hooked up y-dimension

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 .DS_Store
+highcharts-api/highcharts-stock/2-axes-zoom/main.sublime-project
+highcharts-api/highcharts-stock/2-axes-zoom/main.sublime-workspace
